[gd_scene load_steps=4 format=3 uid="uid://ffncciksi1tw"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_l7uga"]
[ext_resource type="Texture2D" uid="uid://c8egr8gfrmslx" path="res://asssets/ui/menu-bg.jpeg" id="2_hugc6"]
[ext_resource type="Theme" uid="uid://e1no5yb08xdc" path="res://asssets/ui/menu_theme.tres" id="4_idst6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l7uga")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBackground" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hugc6")
expand_mode = 2

[node name="VersionNumber" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "vX.X.X"

[node name="Menu" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Exit" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 52.0
offset_right = -39.0
offset_bottom = 103.0
grow_horizontal = 0
theme = ExtResource("4_idst6")
theme_override_font_sizes/font_size = 48
text = "Exit"
flat = true

[node name="HostGame" type="Button" parent="Menu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = 59.0
offset_top = 51.0
offset_right = 312.0
offset_bottom = 102.0
theme = ExtResource("4_idst6")
text = "Host Game"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
layout_mode = 0
offset_left = 59.0
offset_top = 106.0
offset_right = 459.0
offset_bottom = 157.0
theme_override_constants/separation = 16

[node name="JoinGame" type="Button" parent="Menu/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_idst6")
text = "Join Game"
flat = true

[node name="ServerAddress" type="TextEdit" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "127.0.0.1:8080"
placeholder_text = "127.0.0.1:8080"

[connection signal="pressed" from="Menu/Exit" to="." method="exit_game"]
[connection signal="pressed" from="Menu/HostGame" to="." method="host_game"]
[connection signal="pressed" from="Menu/HBoxContainer/JoinGame" to="." method="join_game"]
